--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@coral-protocol/coral-studio",
 	"private": false,
-	"version": "1.1.1",
+	"version": "0.1.2",
 	"type": "module",
 	"files": [
 		"build"
@@ -27,6 +27,8 @@
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/vite": "^4.0.0",
+		"@types/d3-scale": "^4.0.9",
+		"@types/d3-shape": "^3.1.7",
 		"bits-ui": "^2.8.6",
 		"clsx": "^2.1.1",
 		"eslint": "^9.18.0",
@@ -34,6 +36,7 @@
 		"eslint-plugin-svelte": "^3.0.0",
 		"formsnap": "^2.0.1",
 		"globals": "^16.0.0",
+		"layerchart": "2.0.0-next.27",
 		"mode-watcher": "^1.0.8",
 		"openapi-typescript": "^7.8.0",
 		"paneforge": "1.0.0-next.5",
@@ -44,7 +47,7 @@
 		"shx": "^0.4.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
-		"svelte-sonner": "^1.0.5",
+		"svelte-sonner": "^1.0.1",
 		"sveltekit-superforms": "^2.26.1",
 		"tailwind-merge": "^3.0.2",
 		"tailwind-variants": "^1.0.0",
@@ -55,12 +58,11 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
-		"@supabase/supabase-js": "^2.57.4",
-		"@unovis/svelte": "^1.6.1",
-		"@unovis/ts": "^1.6.1",
 		"express": "^5.1.0",
+		"chart.js": "^4.5.0",
 		"openapi-fetch": "^0.14.0",
 		"runed": "^0.28.0",
+		"d3": "^7.9.0",
 		"socket.io": "^4.8.1",
 		"socket.io-client": "^4.8.1",
 		"zod": "4.0.10"
