--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
 	},
 	"dependencies": {
 		"@supabase/supabase-js": "^2.57.4",
+		"@unovis/svelte": "^1.6.1",
+		"@unovis/ts": "^1.6.1",
 		"express": "^5.1.0",
 		"openapi-fetch": "^0.14.0",
 		"runed": "^0.28.0",
