--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -40,17 +40,16 @@ jobs:
           set -eu
 
           BUNDLE_DIR=$(nix build --no-link --print-out-paths .#)
-          ARCHIVE_NAME="coral-console_${{ github.ref_name }}-${{ github.sha }}.tar.gz"
-
-          tar -zcvf "$ARCHIVE_NAME" "$BUNDLE_DIR"
+          mkdir output/
+          mv "$BUNDLE_DIR/*" output/.
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: coral-console_${{ github.ref_name }}-${{ github.sha }}
           path: |
-            ./coral-console_${{ github.ref_name }}-${{ github.sha }}.tar.gz
+            ./output/*
       - name: Release
         uses: softprops/action-gh-release@v2
         if: github.ref_type == 'tag'
         with:
-          files: ./coral-console_${{ github.ref_name }}-${{ github.sha }}.tar.gz
+          files: ./output/*
