--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -41,7 +41,7 @@ jobs:
 
           BUNDLE_DIR=$(nix build --no-link --print-out-paths .#)
           mkdir output/
-          mv "$BUNDLE_DIR/*" output/.
+          mv $BUNDLE_DIR/* output/.
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
