--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"@unovis/svelte": "^1.6.1",
 		"@unovis/ts": "^1.6.1",
 		"express": "^5.1.0",
+		"highlight.js": "^11.11.1",
 		"openapi-fetch": "^0.14.0",
 		"runed": "^0.28.0",
 		"zod": "4.1.13"
