--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"openapi-fetch": "^0.14.0",
 		"runed": "^0.28.0",
 		"svelte-codemirror-editor": "^2.1.0",
+		"virtua": "^0.48.5",
 		"zod": "4.1.13"
 	},
 	"packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
