fix: code cleanup
- code snippets extracted to components
- moved schema related things to schema/*
- better payload state management
- replace raw highlight.js with svelte wrapper lib
- remove unused code

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"check:watch": "yarn prepare && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
-        "prepare": "svelte-kit sync && yarn gen"
+		"prepare": "svelte-kit sync && yarn gen"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
@@ -59,10 +59,10 @@
 		"@unovis/ts": "^1.6.1",
 		"codemirror": "^6.0.2",
 		"express": "^5.1.0",
-		"highlight.js": "^11.11.1",
 		"openapi-fetch": "^0.14.0",
 		"runed": "^0.28.0",
 		"svelte-codemirror-editor": "^2.1.0",
+		"svelte-highlight": "^7.9.0",
 		"virtua": "^0.48.5",
 		"zod": "4.1.13"
 	},
